--- a/nuxeo-distribution-coreserver/pom.xml
+++ b/nuxeo-distribution-coreserver/pom.xml
@@ -277,7 +277,10 @@
       <groupId>org.nuxeo.ecm.platform</groupId>
       <artifactId>nuxeo-platform-wi-backend</artifactId>
     </dependency>
-
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-ws</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
