--- a/pom.xml
+++ b/pom.xml
@@ -881,6 +881,7 @@
         <groupId>com.h2database</groupId>
         <artifactId>h2</artifactId>
         <version>1.1.114-nx</version>
+        <scope>provided</scope>
       </dependency>
 
       <dependency>
