--- a/nuxeo-core-storage-sql/pom.xml
+++ b/nuxeo-core-storage-sql/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-core-parent</artifactId>
-    <version>5.4.2.1-SNAPSHOT</version>
+    <version>5.4.2-HF095.4.2-HF09</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
