--- a/nuxeo-platform-commandline-executor/pom.xml
+++ b/nuxeo-platform-commandline-executor/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-services-parent</artifactId>
-    <version>5.4.2.1-SNAPSHOT</version>
+    <version>5.4.2-HF095.4.2-HF09</version>
   </parent>
 
   <artifactId>nuxeo-platform-commandline-executor</artifactId>
