--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.4.2.1-SNAPSHOT</version>
+    <version>5.4.2-HF095.4.2-HF09</version>
   </parent>
 
   <artifactId>nuxeo-filesystem-connectors</artifactId>
@@ -14,7 +14,7 @@
   <packaging>pom</packaging>
 
   <properties>
-    <nuxeo.wss.version>5.4.2.1-SNAPSHOT</nuxeo.wss.version>
+    <nuxeo.wss.version>5.4.2-HF095.4.2-HF09</nuxeo.wss.version>
     <jersey.version>1.1.5</jersey.version>
   </properties>
 
