--- a/build.xml
+++ b/build.xml
@@ -31,6 +31,20 @@
     <os family="windows" />
   </condition>
 
+  <target name="clone" depends="clone-unix,clone-windows"
+    description="Launch the platform'sz clone command" />
+  <target name="clone-unix" if="osfamily-unix">
+    <exec executable="/bin/sh" failonerror="true">
+      <arg value="clone.sh" />
+    </exec>
+  </target>
+  <target name="clone-windows" if="osfamily-windows">
+    <exec executable="cmd.exe" failonerror="true">
+      <arg value="/C" />
+      <arg value="clone.bat" />
+    </exec>
+  </target>
+
   <target name="clean" depends="clean-unix,clean-windows"
     description="Delete target directories" />
   <target name="clean-unix" if="osfamily-unix">
