--- a/nuxeo-automation/nuxeo-automation-core/pom.xml
+++ b/nuxeo-automation/nuxeo-automation-core/pom.xml
@@ -81,7 +81,11 @@
     <dependency>
       <groupId>org.codehaus.jackson</groupId>
       <artifactId>jackson-core-asl</artifactId>
-    </dependency>    
+    </dependency> 
+    <dependency>
+        <groupId>org.codehaus.jackson</groupId>
+        <artifactId>jackson-mapper-asl</artifactId>
+    </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
