--- a/nuxeo-core-management-jtajca/pom.xml
+++ b/nuxeo-core-management-jtajca/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-core-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111003_1046</version>
   </parent>
 
   <artifactId>nuxeo-core-management-jtajca</artifactId>
