--- a/nuxeo-core-storage-sql/nuxeo-core-storage-sql-extensions/pom.xml
+++ b/nuxeo-core-storage-sql/nuxeo-core-storage-sql-extensions/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-core-storage-sql-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111003_1046</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
