--- a/nuxeo-platform-el/pom.xml
+++ b/nuxeo-platform-el/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>nuxeo-services-parent</artifactId>
     <groupId>org.nuxeo.ecm.platform</groupId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111003_1046</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
