--- a/pom.xml
+++ b/pom.xml
@@ -6,21 +6,21 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-core-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111003_1046</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.platform</groupId>
   <artifactId>nuxeo-services-parent</artifactId>
-  <version>5.4.3-SNAPSHOT</version>
+  <version>5.4.3-I20111003_1046</version>
   <name>Nuxeo Services Parent</name>
   <packaging>pom</packaging>
   <description>Nuxeo Services: Parent.</description>
 
   <properties>
-    <nuxeo.common.version>5.4.3-SNAPSHOT</nuxeo.common.version>
-    <nuxeo.runtime.version>5.4.3-SNAPSHOT</nuxeo.runtime.version>
-    <nuxeo.core.version>5.4.3-SNAPSHOT</nuxeo.core.version>
-    <nuxeo.services.version>5.4.3-SNAPSHOT</nuxeo.services.version>
+    <nuxeo.common.version>5.4.3-I20111003_1046</nuxeo.common.version>
+    <nuxeo.runtime.version>5.4.3-I20111003_1046</nuxeo.runtime.version>
+    <nuxeo.core.version>5.4.3-I20111003_1046</nuxeo.core.version>
+    <nuxeo.services.version>5.4.3-I20111003_1046</nuxeo.services.version>
   </properties>
 
   <modules>
