--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,18 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-services-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111003_1046</version>
   </parent>
 
   <groupId>org.nuxeo.ecm.platform</groupId>
   <artifactId>nuxeo-platform-login-parent</artifactId>
-  <version>5.4.3-SNAPSHOT</version>
+  <version>5.4.3-I20111003_1046</version>
   <name>Nuxeo-platform login parent</name>
   <packaging>pom</packaging>
   <description>Nuxeo Platform login parent</description>
 
   <properties>
-    <nuxeo.platform.version>5.4.3-SNAPSHOT</nuxeo.platform.version>
+    <nuxeo.platform.version>5.4.3-I20111003_1046</nuxeo.platform.version>
   </properties>
 
   <modules>
