--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.platform</groupId>
     <artifactId>nuxeo-features-parent</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111003_1046</version>
   </parent>
 
   <artifactId>nuxeo-filesystem-connectors</artifactId>
@@ -14,8 +14,8 @@
   <packaging>pom</packaging>
 
   <properties>
-    <nuxeo.wss.version>5.4.3-SNAPSHOT</nuxeo.wss.version>
-    <nuxeo.login.digest.version>5.4.3-SNAPSHOT</nuxeo.login.digest.version>
+    <nuxeo.wss.version>5.4.3-I20111003_1046</nuxeo.wss.version>
+    <nuxeo.login.digest.version>5.4.3-I20111003_1046</nuxeo.login.digest.version>
     <jersey.version>1.1.5</jersey.version>
   </properties>
 
