--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/dark-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/dark-backgrounds.properties
@@ -2,12 +2,14 @@ color.major.light=#f3edff
 color.major.medium=#dcccff
 color.major.strong=#c4aaff
 
-color.minor.light=
-color.minor.medium=
-color.minor.strong=
+color.minor.light=#bbb
+color.minor.medium=#bbb
+color.minor.strong=#bbb
 
 neutral.lighter=#f6f6f6
 neutral.medium=#eeeff0
+
+button=#dfdfdf
 
 info=#fff1c6
 warning=#ffc3a6
