--- a/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-backgrounds.properties
+++ b/nuxeo-platform-webapp-core/src/main/resources/themes/palettes/default-backgrounds.properties
@@ -2,9 +2,9 @@ color.major.light=#e6f6ff
 color.major.medium=#cfecff
 color.major.strong=#adf
 
-color.minor.light=
-color.minor.medium=
-color.minor.strong=
+color.minor.light=#bbb
+color.minor.medium=#bbb
+color.minor.strong=#bbb
 
 neutral.lighter=#f6f6f6
 neutral.medium=#eeeff0
