--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.nuxeo</groupId>
   <artifactId>nuxeo-ecm</artifactId>
-  <version>5.4.3-SNAPSHOT</version>
+  <version>5.4.3-I20111020_1649</version>
   <packaging>pom</packaging>
   <name>Nuxeo ECM Projects</name>
   <description>Nuxeo ECM Platform and related components.</description>
@@ -100,19 +100,19 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <nuxeo.common.version>5.4.3-SNAPSHOT</nuxeo.common.version>
-    <nuxeo.runtime.version>5.4.3-SNAPSHOT</nuxeo.runtime.version>
-    <nuxeo.core.version>5.4.3-SNAPSHOT</nuxeo.core.version>
-    <nuxeo.services.version>5.4.3-SNAPSHOT</nuxeo.services.version>
-    <nuxeo.theme.version>5.4.3-SNAPSHOT</nuxeo.theme.version>
-    <nuxeo.jsf.version>5.4.3-SNAPSHOT</nuxeo.jsf.version>
-    <nuxeo.dm.version>5.4.3-SNAPSHOT</nuxeo.dm.version>
-    <nuxeo.webengine.version>5.4.3-SNAPSHOT</nuxeo.webengine.version>
-    <nuxeo.features.version>5.4.3-SNAPSHOT</nuxeo.features.version>
-    <nuxeo.distribution.version>5.4.3-SNAPSHOT</nuxeo.distribution.version>
-    <nuxeo.addons.version>5.4.3-SNAPSHOT</nuxeo.addons.version>
-    <nuxeo.opencmis.version>5.4.3-SNAPSHOT</nuxeo.opencmis.version>
-    <nuxeo.wss.version>5.4.3-SNAPSHOT</nuxeo.wss.version>
+    <nuxeo.common.version>5.4.3-I20111020_1649</nuxeo.common.version>
+    <nuxeo.runtime.version>5.4.3-I20111020_1649</nuxeo.runtime.version>
+    <nuxeo.core.version>5.4.3-I20111020_1649</nuxeo.core.version>
+    <nuxeo.services.version>5.4.3-I20111020_1649</nuxeo.services.version>
+    <nuxeo.theme.version>5.4.3-I20111020_1649</nuxeo.theme.version>
+    <nuxeo.jsf.version>5.4.3-I20111020_1649</nuxeo.jsf.version>
+    <nuxeo.dm.version>5.4.3-I20111020_1649</nuxeo.dm.version>
+    <nuxeo.webengine.version>5.4.3-I20111020_1649</nuxeo.webengine.version>
+    <nuxeo.features.version>5.4.3-I20111020_1649</nuxeo.features.version>
+    <nuxeo.distribution.version>5.4.3-I20111020_1649</nuxeo.distribution.version>
+    <nuxeo.addons.version>5.4.3-I20111020_1649</nuxeo.addons.version>
+    <nuxeo.opencmis.version>5.4.3-I20111020_1649</nuxeo.opencmis.version>
+    <nuxeo.wss.version>5.4.3-I20111020_1649</nuxeo.wss.version>
 
     <nuxeo.connect.client.version>1.2</nuxeo.connect.client.version>
     <nuxeo.distribution.tools.version>1.10.2-SNAPSHOT</nuxeo.distribution.tools.version>
@@ -139,7 +139,7 @@
     <!-- deprecated property since removal of maven-nuxeo-plugin execution -->
     <eclipseVersion>${project.version}</eclipseVersion>
     <!-- Convenient property; prefer use of the right property (runtime/core/...) -->
-    <nuxeo.platform.version>5.4.3-SNAPSHOT</nuxeo.platform.version>
+    <nuxeo.platform.version>5.4.3-I20111020_1649</nuxeo.platform.version>
   </properties>
 
   <dependencyManagement>
