--- a/nuxeo-opencmis-impl/pom.xml
+++ b/nuxeo-opencmis-impl/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-chemistry</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111020_1649</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
