--- a/nuxeo-opencmis-tests/pom.xml
+++ b/nuxeo-opencmis-tests/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.nuxeo.ecm.core</groupId>
     <artifactId>nuxeo-chemistry</artifactId>
-    <version>5.4.3-SNAPSHOT</version>
+    <version>5.4.3-I20111020_1649</version>
   </parent>
 
   <artifactId>nuxeo-opencmis-tests</artifactId>
