--- a/pom.xml
+++ b/pom.xml
@@ -1165,6 +1165,12 @@
         <groupId>org.nuxeo.ecm.platform</groupId>
         <artifactId>nuxeo-platform-relations-jena-plugin</artifactId>
         <version>${nuxeo.features.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.nuxeo.ecm.platform</groupId>
@@ -1822,18 +1828,13 @@
       </dependency>
       <dependency>
         <groupId>javax.persistence</groupId>
-        <artifactId>persistence</artifactId>
-        <version>3.0</version>
-      </dependency>
-      <dependency>
-        <groupId>javax.persistence</groupId>
         <artifactId>persistence-api</artifactId>
         <version>1.0</version>
       </dependency>
       <dependency>
         <groupId>javax.servlet.jsp</groupId>
         <artifactId>jsp-api</artifactId>
-        <version>2.1</version>
+        <version>2.2</version>
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
@@ -1909,12 +1910,6 @@
       <dependency>
         <groupId>commons-logging</groupId>
         <artifactId>commons-logging</artifactId>
-        <version>1.1</version>
-      </dependency>
-      <!-- be careful using this dependency as it breaks unit tests logging -->
-      <dependency>
-        <groupId>commons-logging</groupId>
-        <artifactId>commons-logging-api</artifactId>
         <version>1.1</version>
       </dependency>
       <dependency>
@@ -2025,11 +2020,6 @@
       </dependency>
       <dependency>
         <groupId>xerces</groupId>
-        <artifactId>xmlParserAPIs</artifactId>
-        <version>2.6.2</version>
-      </dependency>
-      <dependency>
-        <groupId>xerces</groupId>
         <artifactId>xercesImpl</artifactId>
         <version>2.9.1</version>
         <exclusions>
@@ -2039,11 +2029,6 @@
             <artifactId>xml-apis</artifactId>
           </exclusion>
         </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>xml-apis</groupId>
-        <artifactId>xml-apis</artifactId>
-        <version>1.3.04</version>
       </dependency>
       <dependency>
         <groupId>jmimemagic</groupId>
@@ -2229,6 +2214,12 @@
         <groupId>org.jboss.seam</groupId>
         <artifactId>jboss-seam</artifactId>
         <version>2.1.0.SP1</version>
+	    <exclusions>
+	      <exclusion>
+	        <groupId>javax.el</groupId>
+	        <artifactId>el-api</artifactId>
+	      </exclusion>
+	    </exclusions>
       </dependency>
       <dependency>
         <groupId>org.jboss.seam</groupId>
@@ -2410,11 +2401,23 @@
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-annotations</artifactId>
         <version>3.4.0.GA</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.hibernate</groupId>
+            <artifactId>ejb3-persistence</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-entitymanager</artifactId>
         <version>3.4.0.GA</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.hibernate</groupId>
+            <artifactId>ejb3-persistence</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
@@ -2477,10 +2480,10 @@
         <scope>provided</scope>
       </dependency>
 
-      <dependency>
+      <dependency> 
         <groupId>org.milyn</groupId>
         <artifactId>milyn-magger</artifactId>
-        <version>1.3.1</version>
+        <version>1.3.1-NXP-7750</version> <!-- removed duplicate batik classes -->
       </dependency>
       <dependency>
         <groupId>org.milyn</groupId>
@@ -2907,11 +2910,27 @@
         <groupId>org.apache.geronimo.components</groupId>
         <artifactId>geronimo-connector</artifactId>
         <version>2.1.3-NX1</version>
+        <exclusions>   
+          <exclusion>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-j2ee-connector_1.5_spec</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.geronimo.components</groupId>
         <artifactId>geronimo-transaction</artifactId>
         <version>2.1.3</version>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-jta_1.1_spec</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-j2ee-connector_1.5_spec</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.geronimo.specs</groupId>
@@ -3052,19 +3071,16 @@
         <groupId>metro.webservices</groupId>
         <artifactId>webservices-api</artifactId>
         <version>1.4</version>
-        <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>metro.webservices</groupId>
         <artifactId>webservices-rt</artifactId>
         <version>1.4</version>
-        <scope>runtime</scope>
       </dependency>
       <dependency>
         <groupId>metro.webservices</groupId>
         <artifactId>webservices-tools</artifactId>
         <version>1.4</version>
-        <scope>runtime</scope>
       </dependency>
 
       <dependency>
@@ -3248,6 +3264,10 @@
             <groupId>xml-apis</groupId>
             <artifactId>xml-apis</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils-core</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
@@ -3260,12 +3280,27 @@
             <groupId>xml-apis</groupId>
             <artifactId>xml-apis</artifactId>
           </exclusion>
+          <exclusion>
+            <groupId>org.apache.geronimo.specs</groupId>
+            <artifactId>geronimo-stax-api_1.0_spec</artifactId>
+          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
         <groupId>org.apache.shindig</groupId>
         <artifactId>shindig-features</artifactId>
         <version>${shindig.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-betwixt</groupId>
+        <artifactId>commons-betwixt</artifactId>
+        <version>0.8</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils-core</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>com.google.code.guice</groupId>
@@ -3281,6 +3316,12 @@
         <groupId>caja</groupId>
         <artifactId>caja</artifactId>
         <version>r3889</version>
+        <exclusions>
+          <exclusion>
+            <groupId>xerces</groupId>
+            <artifactId>xmlParserAPIs</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>com.googlecode.json-simple</groupId>
@@ -3446,26 +3487,46 @@
         <groupId>org.owasp.antisamy</groupId>
         <artifactId>antisamy</artifactId>
         <version>1.4.4</version>
+	<exclusions>
+	  <exclusion>
+	    <groupId>xml-apis</groupId>
+	    <artifactId>xml-apis</artifactId>
+	  </exclusion>
+	  <exclusion>
+	    <groupId>xml-apis</groupId>
+	    <artifactId>xml-apis-ext</artifactId>
+	  </exclusion>
+	</exclusions>
       </dependency>
       <dependency>
-        <groupId>batik</groupId>
+        <groupId>org.apache.xmlgraphics</groupId>
         <artifactId>batik-css</artifactId>
-        <version>1.6-1</version>
+        <version>1.7</version>
+        <exclusions>
+          <exclusion>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>xml-apis</groupId>
+            <artifactId>xml-apis-ext</artifactId>
+          </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
-        <groupId>batik</groupId>
+        <groupId>org.apache.xmlgraphics</groupId>
         <artifactId>batik-ext</artifactId>
-        <version>1.6-1</version>
+        <version>1.7</version>
       </dependency>
       <dependency>
-        <groupId>batik</groupId>
+        <groupId>org.apache.xmlgraphics</groupId>
         <artifactId>batik-gui-util</artifactId>
-        <version>1.6-1</version>
+        <version>1.7</version>
       </dependency>
       <dependency>
-        <groupId>batik</groupId>
+        <groupId>org.apache.xmlgraphics</groupId>
         <artifactId>batik-util</artifactId>
-        <version>1.6-1</version>
+        <version>1.7</version>
       </dependency>
 
       <dependency>
@@ -4073,6 +4134,30 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-war-plugin</artifactId>
           <version>2.1.1</version>
+        </plugin>
+        <plugin>
+          <groupId>org.jboss.tattletale</groupId>
+          <artifactId>tattletale-maven</artifactId>
+          <version>1.2.0.Beta1</version>
+          <executions>
+            <execution>
+              <phase>verify</phase>
+              <goals>
+                <goal>report</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <destination>${project.reporting.outputDirectory}/tattletale</destination>
+            <reports>
+              <report>jar</report>
+              <report>multiplejars</report>
+            </reports>
+            <profiles>
+              <profile>java6</profile>
+            </profiles>
+            <failOnWarn>true</failOnWarn>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
