--- a/pom.xml
+++ b/pom.xml
@@ -2485,7 +2485,7 @@
       <dependency>
         <groupId>org.milyn</groupId>
         <artifactId>flute</artifactId>
-        <version>1.3</version>
+        <version>1.3-gg2</version>
       </dependency>
       <dependency>
         <groupId>org.w3c</groupId>
