--- a/nuxeo-theme-webengine/pom.xml
+++ b/nuxeo-theme-webengine/pom.xml
@@ -56,6 +56,7 @@
       <plugin>
         <groupId>net.sourceforge.maven-taglib</groupId>
         <artifactId>maven-taglib-plugin</artifactId>
+        <version>2.4</version>
         <configuration>
           <taglib.src.dir>${project.build.directory}/classes/META-INF</taglib.src.dir>
         </configuration>
